# esya_demo

./: README.md  makefile
batcher/: Cargo.toml
batcher/src/: bills.rs  main.rs  merkle_tree.rs
contracts/script/: MerkleRootStorage.s.sol
contracts/src/: MerkleRootStorage.sol
contracts/test/: MerkleRootStorage.t.sol
data/: electricity_bill_2.json  electricity_bill_2_corrupted.json  electricity_bills.json  electricity_bills_100.json
