[package]
name = "esya_batcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "esya-batcher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lambdaworks-crypto = {version = "0.11.0", features = ["serde"]}
lambdaworks-math = {version = "0.11.0", features = ["lambdaworks-serde-string"] }
serde = { version = "1.0" }
serde_json = "1"
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features= ['serde'] }
sha3 = "0.10.8"
